ajoute pages et fix recherche communes

--- a/index.html
+++ b/index.html
@@ -65,6 +65,11 @@
           </div>
         </div>
         <button id="searchJobs">Chercher</button>
+        <div class="pagination">
+          <a class="button"><i class="fa fa-angle-double-left previous" aria-hidden="true"></i></a>
+          <a class="number">1</a>
+          <a class="button"><i class="fa fa-angle-double-right next" aria-hidden="true"></i></a>
+        </div>
       </div>
 
       <div id="searchResults"><p>Aucune offre recherchée :'(</p></div>
